# B2BInvoiceAutomation

./: .env.example  .gitignore  B2BInvoiceAutomation.spec  README.md  pyproject.toml
packaging/: desktop_launcher.py
scripts/: build_desktop.ps1  install_desktop.ps1  uninstall_desktop.ps1
src/b2bdoc/: __init__.py  app.py  cli.py  config.py  imap_ingest.py  memory.py  models.py  parser.py  pipeline.py  security.py  sheets.py  table_fallback.py
src/b2bdoc/ai/: __init__.py  providers.py
src/b2bdoc/desktop/: main.py  secrets.py  settings_store.py  windows.py
src/b2bdoc/integrations/: __init__.py  google_oauth.py
src/b2bdoc/mail/: __init__.py  gmail_oauth.py
src/b2bdoc/worker/: scheduler.py
tests/: test_ai_providers.py  test_desktop_settings.py  test_memory.py  test_packaging.py  test_pipeline.py  test_pipeline_ai.py  test_scheduler.py  test_security.py  test_sheets.py  test_table_fallback.py
