[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b2bdoc-automation"
version = "0.1.0"
description = "Zero-disk B2B document ingestion, parsing, review, and Google Sheets ledger automation."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.130",
  "google-auth>=2.29",
  "keyring>=25.2",
  "pdfplumber>=0.11",
  "pillow>=10.3",
  "PySide6>=6.7",
  "pydantic>=2.7",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11",
  "pytest>=8.2",
]

[project.scripts]
b2bdoc = "b2bdoc.cli:main"
b2bdoc-desktop = "b2bdoc.desktop.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
